--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">StickBle</string>
+    <string name="close">断开连接</string>
+    <string name="create">建立连接</string>
 </resources>
