1.增加扫描列表展示 2.增加gatt连接demo测试

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">StickBle</string>
     <string name="close">断开连接</string>
     <string name="create">建立连接</string>
+    <string name="element_text">kong de</string>
 </resources>
