--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="close">断开连接</string>
     <string name="create">建立连接</string>
     <string name="element_text">kong de</string>
+    <string name="write">主线程写数据</string>
 </resources>
